--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
-    "node": "^22.15.0"
+    "node": "^22.15.0",
+    "zod": "^3.24.3"
   }
 }
